# projeto-api-cpp

./: .gitignore  CMakeLists.txt  config.json  main.cpp
core/adapter/: Slice.hpp
core/business/: AddBusinessCase.hpp  BusinessException.hpp
core/config/: ServiceLocator.cpp  ServiceLocator.hpp
modules/base/document/: CnpjDocument.cpp  CnpjDocument.hpp  CpfDocument.cpp  CpfDocument.hpp  Document.cpp  Document.hpp  DocumentType.hpp
modules/models/: Category.cc  Category.h  Client.cc  Client.h  Economicgroup.cc  Economicgroup.h  Organization.cc  Organization.h  Person.cc  Person.h  Product.cc  Product.h  model.json
modules/person/: PersonConstants.hpp
modules/person/adapters/: PersonRepository.cpp  PersonRepository.hpp
modules/person/domain/: BPerson.cpp  BPerson.hpp  CreatePersonRequest.hpp  IPersonRepository.hpp  Person.cpp  Person.h  PersonDto.hpp
modules/person/services/: AddPersonService.cpp  AddPersonService.hpp
